# csv_conversion

./: README.md
csv_conversion/: Pipfile  setup.cfg  setup.py
csv_conversion/csv_conversion/: conversion.py  output_avro_schema.avsc
csv_conversion/csv_conversion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
csv_conversion/csv_conversion/UNKNOWN.egg-info/: PKG-INFO  top_level.txt
csv_conversion/source/: input.csv  output.avro
