[metadata]
name = csv_conversion
version = 1
description = csv to avro conversion
license = BSD 3-Clause License
classifiers =
    Framework :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find: